test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/reexport_paths/src/lib_2.sw
library;

pub use std::hash::*;
