test/src/e2e_vm_tests/test_programs/should_fail/enum_variant_unit/src/lib_a.sw
library lib_a;

dep inner_lib;

use inner_lib::*;
